--- a/LeetCode/131-140/137. 只出现一次的数字 II（中等）.md
+++ b/LeetCode/131-140/137. 只出现一次的数字 II（中等）.md
@@ -6,8 +6,7 @@ Tag : 「哈希表」、「位运算」
 
 
 
-给你一个整数数组 nums ，除某个元素仅出现 一次 外，其余每个元素都恰出现 三次 。请你找出并返回那个只出现了一次的元素。
-
+给你一个整数数组 `nums`，除某个元素仅出现一次外，其余每个元素都恰出现三次。请你找出并返回那个只出现了一次的元素。
 
 示例 1：
 ```
@@ -23,17 +22,11 @@ Tag : 「哈希表」、「位运算」
 ```
 
 提示：
-* 1 <= nums.length <= 3 * $10^4$
-
-* -$2^{31}$ <= nums[i] <= $2^{31}$ - 1
-
-* nums 中，除某个元素仅出现 一次 外，其余每个元素都恰出现 三次
-
-  
+* $1 <= nums.length <= 3 \times 10^4$
+* $-2^{31} <= nums[i] <= 2^{31} - 1$
+* `nums` 中，除某个元素仅出现 一次 外，其余每个元素都恰出现 三次
 
 进阶：你的算法应该具有线性时间复杂度。 你可以不使用额外空间来实现吗？
-
-
 
 ---
 
@@ -136,7 +129,6 @@ class Solution {
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
-
 
 ---
 
