--- a/LeetCode/141-150/149. 直线上最多的点数（困难）.md
+++ b/LeetCode/141-150/149. 直线上最多的点数（困难）.md
@@ -4,31 +4,33 @@
 
 Tag : 「数学」、「枚举」、「哈希表」
 
-给你一个数组 points ，其中 points[i] = [xi, yi] 表示 X-Y 平面上的一个点。求最多有多少个点在同一条直线上。
-
+给你一个数组 `points`，其中 $points[i] = [x_i, y_i]$ 表示 `X-Y` 平面上的一个点。求最多有多少个点在同一条直线上。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/02/25/plane1.jpg)
+
 ```
 输入：points = [[1,1],[2,2],[3,3]]
+
 输出：3
 ```
 示例 2：
 ![](https://assets.leetcode.com/uploads/2021/02/25/plane2.jpg)
 ```
 输入：points = [[1,1],[3,2],[5,3],[4,1],[2,3],[1,4]]
+
 输出：4
 ```
 
 提示：
-* 1 <= points.length <= 300
-* points[i].length == 2
-* -$10^4$ <= xi, yi <= $10^4$
-* points 中的所有点 互不相同
+* $1 <= points.length <= 300$
+* $points[i].length == 2$
+* $-10^4 <= x_i, y_i <= 10^4$
+* `points` 中的所有点 互不相同
 
 ---
 
-### 朴素解法（枚举直线 + 枚举统计）
+### 模拟（枚举直线 + 枚举统计）
 
 我们知道，两个点可以确定一条线。
 
@@ -100,7 +102,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：枚举所有直线的复杂度为 $O(n^2)$；令坐标值的最大差值为 $m$，`gcd` 复杂度为 $O(\log{m})$。整体复杂度为 $O(n^2 * \log{m})$
+* 时间复杂度：枚举所有直线的复杂度为 $O(n^2)$；令坐标值的最大差值为 $m$，`gcd` 复杂度为 $O(\log{m})$。整体复杂度为 $O(n^2 \times \log{m})$
 * 空间复杂度：$O(n)$
 
 ---
