--- a/Index/线段树.md
+++ b/Index/线段树.md
@@ -2,6 +2,7 @@
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [307. 区域和检索 - 数组可修改](https://leetcode-cn.com/problems/range-sum-query-mutable/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/range-sum-query-mutable/solution/by-ac_oier-zmbn/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [327. 区间和的个数](https://leetcode.cn/problems/count-of-range-sum/) | [LeetCode 题解链接](https://leetcode.cn/problems/count-of-range-sum/solution/by-ac_oier-b36o/) | 困难 | 🤩🤩🤩🤩🤩    |
+| [654. 最大二叉树](https://leetcode.cn/problems/maximum-binary-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-binary-tree/solution/by-ac_oier-s0wc/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [699. 掉落的方块](https://leetcode.cn/problems/falling-squares/) | [LeetCode 题解链接](https://leetcode.cn/problems/falling-squares/solution/by-ac_oier-zpf0/) | 困难 | 🤩🤩🤩🤩     |
 | [715. Range 模块](https://leetcode.cn/problems/range-module/) | [LeetCode 题解链接](https://leetcode.cn/problems/range-module/solution/by-ac_oier-i4sw/) | 困难 | 🤩🤩🤩🤩🤩    |
 | [729. 我的日程安排表 I](https://leetcode.cn/problems/my-calendar-i/) | [LeetCode 题解链接](https://leetcode.cn/problems/my-calendar-i/solution/by-ac_oier-hnjl/) | 中等 | 🤩🤩🤩🤩🤩    |
