--- a/LeetCode/781-790/782. 变为棋盘（困难）.md
+++ b/LeetCode/781-790/782. 变为棋盘（困难）.md
@@ -74,16 +74,12 @@ Tag : 「构造」
 
 分别计算「将 `r1` 和 `r2` 转换为 `t` 所需步数」和「将 `c1` 和 `c2` 转换为 `t` 所需步数」，两者之和即为答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     int n = 0, INF = 0x3f3f3f3f;
     int getCnt(int a, int b) {
-        int c1 = 0, c2 = 0;
-        for (int i = 0; i < n; i++) {
-            c1 += ((a >> i) & 1); c2 += ((b >> i) & 1);
-        }
-        return c1 != c2 ? INF : Integer.bitCount(a ^ b) / 2;
+        return Integer.bitCount(a) != Integer.bitCount(b) ? INF : Integer.bitCount(a ^ b) / 2;
     }
     public int movesToChessboard(int[][] g) {
         n = g.length;
@@ -91,8 +87,8 @@ class Solution {
         for (int i = 0; i < n; i++) {
             int a = 0, b = 0;
             for (int j = 0; j < n; j++) {
-                if (g[i][j] == 1) a |= (1 << j);
-                if (g[j][i] == 1) b |= (1 << j);
+                if (g[i][j] == 1) a += (1 << j);
+                if (g[j][i] == 1) b += (1 << j);
             }
             if (r1 == -1) r1 = a;
             else if (r2 == -1 && a != r1) r2 = a;
@@ -110,6 +106,42 @@ class Solution {
         return ans >= INF ? -1 : ans;
     }
 }
+```
+TypeScript 代码：
+```TypeScript
+let n: number = 0, INF = 0x3f3f3f3f
+function bitCount(x: number): number {
+    let ans = 0
+    while (x != 0 && ++ans >= 0) x -= (x & -x)
+    return ans
+}
+function getCnt(a: number, b: number): number {
+    return bitCount(a) != bitCount(b) ? INF : bitCount(a ^ b) / 2
+}
+function movesToChessboard(g: number[][]): number {
+    n = g.length
+    let r1 = -1, r2 = -1, c1 = -1, c2 = -1, mask = (1 << n) - 1
+    for (let i = 0; i < n; i++) {
+        let a = 0, b = 0
+        for (let j = 0; j < n; j++) {
+            if (g[i][j] == 1) a += (1 << j)
+            if (g[j][i] == 1) b += (1 << j)
+        }
+        if (r1 == -1) r1 = a
+        else if (r2 == -1 && a != r1) r2 = a
+        if (c1 == -1) c1 = b
+        else if (c2 == -1 && b != c1) c2 = b
+        if (a != r1 && a != r2) return -1
+        if (b != c1 && b != c2) return -1
+    }
+    if (bitCount(r1) + bitCount(r2) != n) return -1
+    if (bitCount(c1) + bitCount(c2) != n) return -1
+    if ((r1 ^ r2) != mask || (c1 ^ c2) != mask) return -1
+    let t = 0
+    for (let i = 0; i < n; i += 2) t += (1 << i)
+    const ans = Math.min(getCnt(r1, t), getCnt(r2, t)) + Math.min(getCnt(c1, t), getCnt(c2, t))
+    return ans >= INF ? -1 : ans
+};
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(1)$
