--- a/LeetCode/301-310/310. 最小高度树（中等）.md
+++ b/LeetCode/301-310/310. 最小高度树（中等）.md
@@ -27,6 +27,7 @@ Tag : 「树形 DP」、「DFS」、「动态规划」
 ```
 示例 2：
 ![](https://assets.leetcode.com/uploads/2020/09/01/e2.jpg)
+
 ```
 输入：n = 6, edges = [[3,0],[3,1],[3,2],[3,4],[5,4]]
 
@@ -34,8 +35,8 @@ Tag : 「树形 DP」、「DFS」、「动态规划」
 ```
 
 提示：
-* $1 <= n <= 2 * 10^4$
-* $edges.length == n - 1$
+* $1 <= n <= 2 \times 10^4$
+* $edges.length = n - 1$
 * $0 <= ai, bi < n$
 * $ai != bi$
 * 所有 $(ai, bi)$ 互不相同
@@ -134,7 +135,7 @@ class Solution {
 
 ### 补充
 
-似乎还是有同学不太理解，这里再补充说明一下好了。
+可能会初次接触「树形 DP」的同学不太理解，这里再补充说明一下。
 
 归根结底，以  `u` 为根节点的最大深度，必然是下面三种情况之一（往下、往上 和 往上再往下）。
 
