--- a/LeetCode/291-300/295. 数据流的中位数（困难）.md
+++ b/LeetCode/291-300/295. 数据流的中位数（困难）.md
@@ -32,7 +32,7 @@ findMedian() -> 2
 
 ---
 
-### 数据结构运用
+### 数据结构运用 - 优先队列（堆）
 
 这是一道经典的数据结构运用题。
 
@@ -60,7 +60,6 @@ findMedian() -> 2
 class MedianFinder {
     PriorityQueue<Integer> l = new PriorityQueue<>((a,b)->b-a);
     PriorityQueue<Integer> r = new PriorityQueue<>((a,b)->a-b);
-    
     public void addNum(int num) {
         int s1 = l.size(), s2 = r.size();
         if (s1 == s2) {
@@ -79,7 +78,6 @@ class MedianFinder {
             }
         }
     }
-    
     public double findMedian() {
         int s1 = l.size(), s2 = r.size();
         if (s1 == s2) {
@@ -97,7 +95,7 @@ class MedianFinder {
 
 ### 进阶
 
-* 如果数据流中所有整数都在 0 到 100 范围内，你将如何优化你的算法？
+* 如果数据流中所有整数都在 $0$ 到 $100$ 范围内，你将如何优化你的算法？
 
 可以使用建立长度为 $101$ 的桶，每个桶分别统计每个数的出现次数，同时记录数据流中总的元素数量，每次查找中位数时，先计算出中位数是第几位，从前往后扫描所有的桶得到答案。
 
@@ -105,20 +103,18 @@ class MedianFinder {
 
 **对顶堆解法两个操作中耗时操作复杂度为 $O(\log{n})$，$\log$ 操作常数不会超过 $3$，在极限数据 $10^7$ 情况下计算量仍然低于耗时操作复杂度为 $O(C)$（$C$ 固定为 $101$）桶计数解法。**
 
-* 如果数据流中 99% 的整数都在 0 到 100 范围内，你将如何优化你的算法？
+* 如果数据流中 `99%` 的整数都在 $0$ 到 $100$ 范围内，你将如何优化你的算法？
 
 和上一问解法类似，对于 $1$% 采用哨兵机制进行解决即可，在常规的最小桶和最大桶两侧分别维护一个有序序列，即建立一个代表负无穷和正无穷的桶。
 
-上述两个进阶问题的代码如下，但注意由于真实样例的数据分布不是进阶所描述的那样（不是绝大多数都在 $[0,100]$ 范围内），所以会 TLE。
+上述两个进阶问题的代码如下，但注意由于真实样例的数据分布不是进阶所描述的那样（不是绝大多数都在 $[0,100]$ 范围内），会 `TLE`。
 
 代码：
 ```Java
 class MedianFinder {
-
     TreeMap<Integer, Integer> head = new TreeMap<>(), tail = new TreeMap<>();
     int[] arr = new int[101];
     int a, b, c;
-
     public void addNum(int num) {
         if (num >= 0 && num <= 100) {
             arr[num]++;
@@ -131,13 +127,11 @@ class MedianFinder {
             c++;
         }
     }
-    
     public double findMedian() {
         int size = a + b + c;
         if (size % 2 == 0) return (find(size / 2) + find(size / 2 + 1)) / 2.0;
         return find(size / 2 + 1);
     }
-
     int find(int n) {
         if (n <= a) {
             for (int num : head.keySet()) {
