--- a/LeetCode/661-670/662. 二叉树最大宽度（中等）.md
+++ b/LeetCode/661-670/662. 二叉树最大宽度（中等）.md
@@ -56,6 +56,10 @@ Tag : 「二叉树」、「DFS」、「哈希表」
 
 而实现上，我们可以利用先 `DFS` 左节点，再 `DFS` 右节点的性质可知，每层的最左节点必然是最先被遍历到，因此我们只需要记录当前层最先被遍历到点编号（即当前层最小节点编号），并在 `DFS` 过程中计算宽度，更新答案即可。
 
+> 看到评论区有同学讨论关于编号溢出问题，之所以溢出仍能 `AC` 是因为测试数组中没有同层内「宽度」左端点不溢出，右端点溢出，同时该层就是最大宽度的数据点。
+我们可以通过 `u = u - map.get(depth) + 1` 操作来对同层内的节点进行重新编号（使得同层最靠左的非空节点编号为 $1$）。
+通过重编号操作 我们可以消除由于深度加深带来的编号溢出问题，同时 `TS` 代码不再需要使用 `bigint`。
+
 Java 代码：
 ```Java
 class Solution {
@@ -69,6 +73,7 @@ class Solution {
         if (root == null) return ;
         if (!map.containsKey(depth)) map.put(depth, u);
         ans = Math.max(ans, u - map.get(depth) + 1);
+        u = u - map.get(depth) + 1;
         dfs(root.left, u << 1, depth + 1);
         dfs(root.right, u << 1 | 1, depth + 1);
     }
@@ -76,20 +81,21 @@ class Solution {
 ```
 TypeScript 代码：
 ```TypeScript
-let map = new Map<number, bigint>()
-let ans = 0n
+let map = new Map<number, number>()
+let ans = 0
 function widthOfBinaryTree(root: TreeNode | null): number {
     map.clear()
-    ans = 0n
-    dfs(root, 1n, 0)
-    return Number(ans)
+    ans = 0
+    dfs(root, 1, 0)
+    return ans
 };
-function dfs(root: TreeNode | null, u: bigint, depth: number): void {
+function dfs(root: TreeNode | null, u: number, depth: number): void {
     if (root == null) return 
     if (!map.has(depth)) map.set(depth, u)
-    if (u - map.get(depth) + 1n > ans) ans = u - map.get(depth) + 1n
-    dfs(root.left, u << 1n, depth + 1)
-    dfs(root.right, u << 1n | 1n, depth + 1)
+    ans = Math.max(ans, u - map.get(depth) + 1)
+    u = u - map.get(depth) + 1
+    dfs(root.left, u << 1, depth + 1)
+    dfs(root.right, u << 1 | 1, depth + 1)
 }
 ```
 * 时间复杂度：$O(n)$
